# libemulator_protocols

./: CMakeLists.txt  SharemindLibEmulatorProtocolsConfig.cmake.in  SharemindLibEmulatorProtocolsConfigVersion.cmake.in
src/: Binary.h  BitVector.h  Nullary.h  ShareVector.h  Ternary.h  Unary.h  ValueHeap.h  ValueTraits.h  VmVector.h
